--- a/BoletinTema1ALUMNO.Rmd
+++ b/BoletinTema1ALUMNO.Rmd
@@ -151,25 +151,25 @@ distintos
 e.  Determina las diferencia entre los animales que no aparecen en ambos conjuntos.
 
 ```{r}
-
-
-
-
-
-
-
-
-
-
-
-
+library(dplyr)
+sq<- a["Arctic ground squirrel",]
+mr<-a["Mole rat",]
+pm<- a["Patas monkey",]
+af<- a["Arctic fox",]
+aux1<- union(sq,mr)
+aux2<- union(pm,af)
+df <- union(aux1,aux2)
+df
+#En este data frame se puede observar por ejemplo que el animal mas grande es el patas monkey, y el mas pequeño el mole rat
 ```
 
 2.  La funcion **qqPlot** del paquete **car** puede ser utilizada para determinar gráficamente si una serie de puntos siguen una distribución de datos Gaussiana. Si las muestras están dentro de las líneas discontinuas podemos indicar que siguen una distribución Gaussiana con un 95 % de confianza. Utilizando esta función representa el logaritmo neperiano (**log**) del peso del cerebro (**brain weigths**) del registro de datos **mammals** del paquete **MASS** y conjunto de datos **Animals2** de la librería **robustbase**. ¿Presentan el mismo comportamiento ?.¿Podríamos decir que siguen una distribución Gaussiana ?
 
 ```{r}
-
-
+library(car)
+grafico1 <- qqPlot(log(a$brain))
+grafico2 <- qqPlot(log(b$brain))
+#Presentan un comportamiento similar, y siguen una distribución gaussiana 
 ```
 
 3.  La función **library** sin argumentos abre una ventana y muestra las librerías que han sido instaladas.
