--- a/BoletinTema1ALUMNO.Rmd
+++ b/BoletinTema1ALUMNO.Rmd
@@ -180,15 +180,13 @@ grafico2 <- qqPlot(log(b$brain))
 
     ```{r}
 
+libReturn<- library()
+libReturn
+#Nos devuelve todos los paquetes que hay en esta practica
+head(libReturn,5)
 
 
-
-
-
-
-
-
-
+#Hay 209 librerias instaladas (en este momento)
     ```
 
 4.  En las transparencias del tema 1 se citan los primeros pasos a seguir cuando se analiza un nuevo conjunto de datos.
