--- a/BoletinTema1ALUMNO.Rmd
+++ b/BoletinTema1ALUMNO.Rmd
@@ -291,17 +291,6 @@ abline(Model2)
 
 ```{r,echo=T,include=T,eval=F}
 
-#Diagrama de dispersión global.
-plot(cabbages$VitC, cabbages$HeadWt)
-#Diagrama de dispersión etiquetando según un factor.
-# Planteamos 2 modelos lineales, uno para los datos de cada factor
-Model1 <- lm(cabbages$Headwt ~ cabbages$VitC, data = cabbages )
-Model2 <- lm(cabbages$Headwt ~ cabbages$VitC, data = cabbages)
-# Representamos las rectas correspondientes a cada modelo lineal
-abline(Model1, lty=2)
-abline(Model2)
-
-
 
 
 
@@ -316,9 +305,17 @@ a.  Utiliza un procedimiento análogo para determinar si se aprecia una relació
 b.  Repite el apartado anterior, pero obteniendo un modelo para cada una de las dos variedades de calabaza, **Cult**. Ver[Parámetros básicos plot](https://www.statmethods.net/advgraphs/parameters.html).
 
 ```{r}
-
-
-
+#Diagrama de dispersión global.
+plot(cabbages$VitC, cabbages$HeadWt)
+#Diagrama de dispersión etiquetando según un factor.
+plot(cabbages$VitC, cabbages$HeadWt, pch=c(6,16)[cabbages$Cult])
+legend(x="topright",legend=c("Cult = c39","Cult = c52"), pch=c(6,16))
+# Planteamos 2 modelos lineales, uno para los datos de cada factor
+Model1 <- lm(HeadWt ~ VitC, data = cabbages, subset = which(Cult == "c39"))
+Model2 <- lm(HeadWt ~ VitC, data = cabbages, subset = which(Cult == "c52"))
+# Representamos las rectas correspondientes a cada modelo lineal
+abline(Model1, lty=2)
+abline(Model2)
 
 
 
@@ -338,6 +335,9 @@ c.  Usa **summary** con cada uno de los modelos obtenidos y observa **Coefficien
 
 ```{r}
 
-
-
+summary(Model1)
+summary(Model2)
+lm(Model1)
+lm(Model2)
+#Resultados acorde al enunciado
 ```
